# desmos.py

./: .gitignore  LICENSE  README.md  pyproject.toml
desmos/: __init__.py  actions.py  errors.py  expr.py  field.py  graph.py  iter.py  primitives.py  translate.py
examples/: electric_field.py  geometry.py  interact.py  mandelbrot.py  quickstart.py
tests/: test_translate.py
